# auto-fine-tuning

./: .gitignore  README.md  config.yaml  pyproject.toml
docs/: CONFIG.md  PLAN.md  RESEARCH-1.md  SPEC.md
src/aft/: __init__.py  config.py  contracts.py
tests/: test_config.py  test_contracts.py
